--- a/EndavaForms/EndavaForms/Views/LocalDb.xaml
+++ b/EndavaForms/EndavaForms/Views/LocalDb.xaml
@@ -3,6 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="EndavaForms.Views.LocalDb">
-  
+             x:Class="EndavaForms.Views.LocalDb"
+             Title="{Binding Title}">
+
+    <StackLayout>
+        <Label Text="{Binding Title, Mode=OneWay}" />
+    </StackLayout>
 </ContentPage>
