--- a/EndavaForms/EndavaForms/Views/ListaRest.xaml
+++ b/EndavaForms/EndavaForms/Views/ListaRest.xaml
@@ -8,7 +8,9 @@
 
     <ListView Margin="10"
               ItemsSource="{Binding Registros, Mode=OneWay}"
-              IsRefreshing="{Binding IsBusy, Mode=OneWay}">
+              IsRefreshing="{Binding IsBusy, Mode=OneWay}"
+              SelectionMode="Single"
+              SelectedItem="{Binding RegistroSeleccionado, Mode=TwoWay}">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ImageCell
