Se adiciona ona propiedad al modelo para visualizar la fecha de nacimiento en el listado

--- a/EndavaForms/EndavaForms/Views/LocalDb.xaml
+++ b/EndavaForms/EndavaForms/Views/LocalDb.xaml
@@ -18,7 +18,7 @@
             <DataTemplate>
                 <TextCell
                     Text="{Binding NombreCompleto}"
-                    Detail="{Binding FechaNacimiento}"></TextCell>
+                    Detail="{Binding FechaDeNacimiento}"></TextCell>
             </DataTemplate>
         </ListView.ItemTemplate>
 
